--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,6 +25,7 @@ jobs:
     - name: Mikero Depends
       run: |
         sudo apt-get install liblzo2-2 libvorbis0a libvorbisfile3 libvorbisenc2 libogg0 libuchardet0
+        which rsync
 
     - name: Install and Build Mikero
       uses: SCHTAMP/mikero-install@v1
